# llm-chess-engines

./: .gitignore  README.md  leaderboard_tui.py  main.py  pyproject.toml
adapters/: __init__.py  anthropic.py  base.py  gemini.py  openai.py  openai_compatible.py
benchmark/: README.md  package-lock.json  package.json
benchmark/public/data/: landing-data.json
benchmark/scripts/: export_landing_snapshot.py  sync_supabase.py
benchmark/src/app/: globals.css  layout.tsx  page.tsx
benchmark/src/app/games/view/: page.tsx
benchmark/src/app/leaderboard/: page.tsx
benchmark/src/components/: GameReplay.tsx  GameViewer.tsx  GamesExplorer.tsx  ModelMark.tsx  SiteFooter.tsx
benchmark/src/core/: benchmark-api.ts  landing-data.json  landing-snapshot.ts
chess/: engine.py
competition/: __init__.py  discovery.py  game.py  leaderboard.py  models.py  openings.py  results_migration.py  runner.py  store.py  uci.py
harness/: config.py  prompts.py  runner.py  tools.py  types.py  workspace.py
results/: elo_anchors.json  elo_leaderboard.json
tests/: test_adapters.py  test_competition.py  test_runner_cli.py  test_workspace_tools.py
tools/: base.py  list_files.py  read_file.py  run_shell.py  write_file.py
web-chess-gui/: .gitignore
web-chess-gui/scripts/: export_competition.py
web-chess-gui/src/: App.tsx  styles.css
