[project]
name = "llm-chess-engines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.74.0",
    "chess>=1.11.2",
    "google-genai>=1.57.0",
    "openai>=2.13.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
]

[project.scripts]
llm-chess = "main:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
packages = ["adapters", "competition", "harness", "tools"]
